[feature] add new swagger model and tags
