# app/Models/Supplier.php
@@ -6,9 +6,23 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Database\Eloquent\Model;
 use App\Models\Medicine;
 
+/* ----- SWAGGER OA --------- */
+/**
+ * @OA\Schema(
+ *      title="supplier",
+ *      description="Properties of model supplier",
+ *      required={"name"},
+ * 	    @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          example="PT Kimia Farma"
+ *      )
+ * )
+ */
+
 class Supplier extends Model
 {
-    use SoftDeletes;
+    // use SoftDeletes;
 
     protected $table = 'suppliers';
 
